--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Portafolio personal de selena Proyecto en html">
     <title>Portafolio personal</title>
 </head>
 <body>
@@ -23,21 +24,26 @@
     </header>
 
     <main>
-        <section id="inicio">
-            <h2>Bienvenidos a mi portafolio</h2>
-            <h3>Sobre mi</h3 id="sobre mi">
-            <p>soy selena molina figueroa y Actualmente estoy en la fase de aprendizaje de desarrollo web. Mi principal objetivo es dominar la maquetación web con HTML5 y, a futuro, CSS y JavaScript</p>
-        </section>
-        <img src="html.jpg" alt="200">
-        <hr>
-        <section id="habilidades">
-    <h2>Mis Habilidades en HTML5</h2>
-    
+        <article>
+            <section id="inicio">
+                <h2>Bienvenidos a mi portafolio</h2>
+                <h3>Sobre mi</h3 id="sobre mi">
+                <p>soy selena molina figueroa y Actualmente estoy en la fase de aprendizaje de desarrollo web. Mi principal objetivo es dominar la maquetación web con HTML5 y, a futuro, CSS y JavaScript</p>
+            </section>
+            <aside>
+
+                <img src="html.jpg" alt="200">
+                <hr>
+                <section id="habilidades">
+            <h2>Mis Habilidades en HTML5</h2>
+            
+            </aside>
+        </article>
     <ul>
         <li>Estructura Semántica:estoy aprendiendo a usar correctamente las etiquetas header, main, section, article, y footer</li>
         <li>Manejo de Formularios:estoy aprendiendo a crear y validar campos usando atributos como code type="email" code y code required code</li>
-        <li>Multimedia:estpy aprendiendo a integrar contenido de audio y video usando las etiquetas audio y video</li>
-        <li>Tablas de Datos:esoy aprendiendo a estructurar información compleja en filas y columnas usando la etiqueta <table></li>
+        <li>Multimedia:estoy aprendiendo a integrar contenido de audio y video usando las etiquetas audio y video</li>
+        <li>Tablas de Datos:estoy aprendiendo a estructurar información compleja en filas y columnas usando la etiqueta <table></li>
     </ul>
 
     <h3>Próximos Pasos</h3>
@@ -84,6 +90,7 @@
         <video width="600" height="600" controls id="video">
             <source src="2278095-hd_1920_1080_30fps.mp4" type="video/mp4">
         </video>
+
         <audio controls id="audio">
             <source src="131-Desenos-e-migracions-con-Sebastian-Rios.mp3" type="audio/mpeg">
         </audio>
