--- a/formulario.html
+++ b/formulario.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Portafolio personal de selena Proyecto en html">
+    <title>formulario</title>
 </head>
 <body>
     
