--- a/index.html
+++ b/index.html
@@ -90,9 +90,16 @@
         <video width="600" height="600" controls id="video">
             <source src="2278095-hd_1920_1080_30fps.mp4" type="video/mp4">
         </video>
+        <video width="600" height="600" controls id="video">
+            <source src="6804117-uhd_4096_2160_25fps.mp4" type="video/mp4">
+        </video>
 
         <audio controls id="audio">
             <source src="131-Desenos-e-migracions-con-Sebastian-Rios.mp3" type="audio/mpeg">
+        </audio>
+
+        <audio controls id="audio">
+            <source src="128-Software-libre-o-motor-da-Xenomica-con-Adrian-Casanova.mp3" type="audio/mpeg">
         </audio>
     </article>
 </section>
