--- a/tabla.html
+++ b/tabla.html
@@ -69,7 +69,7 @@
                 </li>
             </ol>
             
-            <p><strong>Total a Pagar: $190 USD</strong></p>
+            <p><strong>Total a Pagar: $190</strong></p>
             
             <button>Finalizar Compra</button>
         </div>
